--- a/src/main/angular-media-app/src/app/user-page/user-page.component.html
+++ b/src/main/angular-media-app/src/app/user-page/user-page.component.html
@@ -11,7 +11,7 @@
                                 <article>
                                     <div class="card">
                                         <div class="card-body profile">
-                                            <img alt="profile picture"
+                                            <img [routerLink]="['/contact-page/', post.user?.id]" alt="profile picture"
                                                 title="{{post.user?.firstName}} {{post.user?.lastName}}"
                                                 src="https://www.bankrate.com/2019/03/22142110/How-to-trade-stocks.jpg?auto=webp&optimize=high&width=912">
                                             <a [routerLink]="['/user-page/', post.user?.id]">
