Ma-22 - Fix birthDate

--- a/src/main/angular-media-app/src/app/contact-page/contact-page.component.html
+++ b/src/main/angular-media-app/src/app/contact-page/contact-page.component.html
@@ -38,7 +38,7 @@
 
                                 <div class="form-outline mb-4">
                                     <input name="birth" type="date" id="label_email"
-                                        class="form-control form-control-lg" [ngModel]="user.birthdate | date:'yyyy-MM-dd'" (ngModelChange)="user.birthdate = $event" />
+                                        class="form-control form-control-lg" [ngModel]="user.birthDate | date:'yyyy-MM-dd'" (ngModelChange)="user.birthDate = $event" />
                                     <label class="form-label" for="label_email">Your birth date</label>
                                 </div>
 
