--- a/src/main/angular-media-app/src/app/page-not-found/page-not-found.component.html
+++ b/src/main/angular-media-app/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="mediapp-viewport-w-h-full bimage container-fluid">
     <div class="flex-parent-start">
         <div class="container">
-            <img id="looking" src="../../assets/cat-looking.png">
+            <img id="looking" alt="Scared cat" src="../../assets/cat-looking.png">
             <h2>404</h2>
             <h6>Something's missing</h6>
             <p>This page was not found. You may have mistyped the address or the page may have moved.</p>
