--- a/src/main/angular-media-app/src/app/app.component.html
+++ b/src/main/angular-media-app/src/app/app.component.html
@@ -27,6 +27,9 @@
                             <a class="nav-link" [routerLink]="['/user-page/', getUserId()]">My Page</a>
                         </li>
                         <li *ngIf="authService.isLoggedIn()" class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" routerLink="/groups">My Groups</a>
+                        </li>
+                        <li *ngIf="authService.isLoggedIn()" class="nav-item" routerLinkActive="active">
                             <a class="nav-link" routerLink="/friend-requests">Friend requests</a>
                         </li>
                         <li *ngIf="authService.isLoggedIn()" class="nav-item" routerLinkActive="active">
